# meta-programming-experiments

./: .gitignore  .ocamlformat  LICENSE  dune-project  meta-programming-experiments.opam  tmp.ml  tmp.mli
plugin/: dune  g_plugin.mlg  log.ml  main.ml
theories/: DeBruijn.v  DeBruijnReduction.v  DeBruijn_CPS.v  DeBruijn_CPS_relational.v  DeBruijn_reduction.v  FuelMonad.v  LN_CPS.v  LN_cofinite.v  LN_exists.v  LN_forall.v  LN_forall_reduction.v  Test.v  Test.v_
theories/binders/: DeBruijn_CPS.v  LN_CPS.v  LN_cofinite_reduction.v  LN_forall_reduction.v  Weituo_CPS.v
theories/divergence/: Coinduction_exercises.v  DeBruijn_CPS_coind.v  FuelFreeMonad.v
theories/misc/: Relocatable.v
theories/relational/: DeBruijn_CPS_relational.v
