(lang dune 3.16)

(using coq 0.9)

(name meta-programming-experiments)

(generate_opam_files true)

(package
 (name meta-programming-experiments)
 (maintainers "Mathis Bouverot-Dupuis (mathis.bouverot@ens.psl.eu)")
 (authors "Mathis Bouverot-Dupuis")
 (synopsis "Meta-programming experiments")
 (depends
  (coq
   (= 9.0.0))))
